Comments: -Fixed background for Paymate project page and the heading -Fixed Main menu Heading with some spacing tweaks

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3077,7 +3077,7 @@ input, select, textarea {
 		-webkit-transition: background-color 0.2s ease-in-out;
 		-ms-transition: background-color 0.2s ease-in-out;
 		transition: background-color 0.2s ease-in-out;
-		background-color: rgba(53, 56, 73, 0.95);
+		background-color: rgba(53, 56, 73, 1);
 		height: 3.5em;
 		left: 0;
 		line-height: 3.5em;
@@ -4180,18 +4180,28 @@ input, select, textarea {
 	height: 40px;
 }
 
-.title>h2, .title>ul, .title>p, .title>img {
+.titleMain>h2, .titleMain>ul, .titleMain>p, .titleMain>img, .title>h2, .title>ul, .title>p, .title>img{
 	text-align: center;
 	min-width: 50%;
 	max-width: 100%;
 	/*white-space: nowrap;*/
 }
 
+.title {
+	width: 100%;
+	background-color: rgba(255, 255, 255, 0.0);
+	border-radius: 20px 20px 20px 20px;
+	display: block;
+	padding: 0.8em;
+}
+
 @media only screen and (min-width: 768px) {
-	.title>h2, .title>p, .title>ul, .title>img {
+	.title, .titleMain>h2, .titleMain>p, .titleMain>ul {
 		width: 60% !important;
 	}
 }
+
+
 
 
 .list>li {
@@ -4217,26 +4227,28 @@ html {
 .payMate {
 	padding: 9em 0 6.25em 0 !important;
 	background-color: #2e3141 !important;
-	background-image: linear-gradient(to top, rgba(46, 49, 65, 0.8), rgba(46, 49, 65, 0.8)), url("../../images/PayMateBackground.PNG")!important;
+	background-image: linear-gradient(to top, rgba(167, 208, 228, 0.85), rgba(184, 232, 254, 0.85)), url("../../images/PayMateBackground.PNG")!important;
 	background-size: auto, cover !important;
 	background-position: center, center !important;
-	margin-top: 3em;
+	margin-top: 3.5em;
 	
 }
 
-.payMateLogo {
-	background-color: rgba(255, 255, 255, 0.30);
-	max-width: 80%;
-	border-radius: 20px;
-	display: block;
-	padding: 0.4em;
+.darkBtn>li>a {
+	color:rgba(1, 48, 138, 0.95) !important;
+	box-shadow: inset 0 0 0 2px rgba(1, 48, 138, 0.95) !important;
+	
 }
 
 .logoSubText {
 	filter: blur(0);
     opacity: 1;
-    border-top: solid 2px rgba(255, 255, 255, 0.125);
-    font-size: 0.9em;
-    margin-top: 0.8em;
-    padding-top: 0.4em;
+	border-top: solid 2px rgba(1, 48, 138, 0.95);
+	font-size: 0.9em;
+	color:rgba(1, 48, 138, 0.95);
+	font-weight: 550 !important;
+}
+
+.headerShade {
+	background-color: rgba(255, 255, 255, 0.8);
 }
